--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ body.dark .battery-card i {
       <div class="bg-white/20 p-2 rounded-lg mr-3">
         <i class="fas fa-car-battery text-2xl"></i>
       </div>
-      <h1 class="text-2xl font-bold"LIFEPO4 BMS MONITORING</h1>
+      <h1 class="text-2xl font-bold">LIFEPO4 BMS MONITORING</h1>
     </div>
 
     <div class="flex items-center space-x-4">
