--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LIFEPO4 BMS ONLINE</title>
+  <title>HUAWEI BMS ONLINE</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -152,7 +152,7 @@ body.dark .battery-card i {
       <div class="bg-white/20 p-2 rounded-lg mr-3">
         <i class="fas fa-car-battery text-2xl"></i>
       </div>
-      <h1 class="text-2xl font-bold">LIFEPO4 BMS MONITORING</h1>
+      <h1 class="text-2xl font-bold">HUAWEI BMS MONITOR By Rezky Logam</h1>
     </div>
 
     <div class="flex items-center space-x-4">
