--- a/Rezky.html
+++ b/Rezky.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MPPT Solar Monitoring</title>
+  <title>MPP SAMOTO 100A ONLINE</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
@@ -344,8 +344,8 @@
 <body>
   <div class="container">
     <header>
-      <h1>MPPT Solar Monitoring System</h1>
-      <h2>Real-time Performance Tracking </h2>
+      <h1>MPPT SAMOTOO 100A MONITORING</h1>
+      <h2>Real-time Performance Tracking By Rezky Logam </h2>
     </header>
     
     <div class="status-bar">
@@ -399,7 +399,7 @@
     </div>
     
     <div class="system-info">
-      <p>@Product By <a href="https://www.facebook.com/Fatkhur.etos2012/">Fatkhur Rohman </a> WA Contact <a href="https://wa.me/628972309993">WA Contact</a> </p>
+      <p>@Product By <a href="https://www.facebook.com/Fatkhur.etos2012/">Rezky Logam </a> WA Contact <a href="https://wa.me/628972309993">WA Contact</a> </p>
     </div>
   </div>
 
@@ -747,4 +747,5 @@
     initChart([], []);
   </script>
 </body>
+
 </html>
