--- a/Rezky.html
+++ b/Rezky.html
@@ -344,7 +344,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>MPPT SAMOTOO 100A MONITORING</h1>
+      <h1>MPPT SAMOTO 100A MONITORING</h1>
       <h2>Real-time Performance Tracking By Rezky Logam </h2>
     </header>
     
@@ -749,4 +749,5 @@
 </body>
 
 </html>
+
 
