--- a/Rezky.html
+++ b/Rezky.html
@@ -101,7 +101,7 @@
     }
     
     .data-card {
-      background: white;
+      background: black;
       border-radius: 10px;
       padding: 15px;
       box-shadow: 0 3px 10px rgba(0,0,0,0.08);
@@ -149,14 +149,14 @@
       border: 2px solid #3498db;
       border-radius: 8px;
       font-size: 1rem;
-      background: white;
+      background: black;
       box-shadow: 0 2px 5px rgba(0,0,0,0.05);
     }
     
     .btn {
       padding: 12px 25px;
       background: linear-gradient(to right, #3498db, #2c3e50);
-      color: white;
+      color: black;
       border: none;
       border-radius: 8px;
       cursor: pointer;
@@ -749,5 +749,6 @@
 </body>
 
 </html>
+
 
 
