--- a/Rezky.html
+++ b/Rezky.html
@@ -101,7 +101,7 @@
     }
     
     .data-card {
-      background: white;
+      background: gray;
       border-radius: 10px;
       padding: 15px;
       box-shadow: 0 3px 10px rgba(0,0,0,0.08);
@@ -156,7 +156,7 @@
     .btn {
       padding: 12px 25px;
       background: linear-gradient(to right, #3498db, #2c3e50);
-      color: black;
+      color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
