--- a/Rezky.html
+++ b/Rezky.html
@@ -145,7 +145,7 @@
     
     .flatpickr-input {
       width: 100%;
-      padding: 7px 10px;
+      padding: 12px 15px;
       border: 2px solid #3498db;
       border-radius: 8px;
       font-size: 1rem;
@@ -221,7 +221,7 @@
     .sensor-item {
       display: flex;
       align-items: center;
-      background: white;
+      background: black;
       padding: 10px 15px;
       border-radius: 30px;
       box-shadow: 0 3px 8px rgba(0,0,0,0.08);
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
