--- a/Rezky.html
+++ b/Rezky.html
@@ -90,7 +90,7 @@
     
     #data-container {
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(5, 1fr);
       gap: 15px;
       max-height: 300px;
       overflow-y: auto;
@@ -221,7 +221,7 @@
     .sensor-item {
       display: flex;
       align-items: center;
-      background: black;
+      background: white;
       padding: 10px 15px;
       border-radius: 30px;
       box-shadow: 0 3px 8px rgba(0,0,0,0.08);
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
