--- a/Rezky.html
+++ b/Rezky.html
@@ -96,7 +96,7 @@
       overflow-y: auto;
       padding: 10px;
       border-radius: 10px;
-      background: #fff;
+      background: rgb(0,0,0);
       box-shadow: inset 0 0 10px rgba(0,0,0,0.05);
     }
     
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
