--- a/Rezky.html
+++ b/Rezky.html
@@ -92,7 +92,7 @@
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       gap: 15px;
-      max-height: 300px;
+      max-height: 500px;
       overflow-y: auto;
       padding: 10px;
       border-radius: 10px;
@@ -101,7 +101,7 @@
     }
     
     .data-card {
-      background: silver;
+      background: white;
       border-radius: 10px;
       padding: 15px;
       box-shadow: 0 3px 10px rgba(0,0,0,0.08);
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
