--- a/Rezky.html
+++ b/Rezky.html
@@ -96,12 +96,12 @@
       overflow-y: auto;
       padding: 10px;
       border-radius: 10px;
-      background: rgb(0,0,0);
+      background: #ff;
       box-shadow: inset 0 0 10px rgba(0,0,0,0.05);
     }
     
     .data-card {
-      background: white;
+      background: silver;
       border-radius: 10px;
       padding: 15px;
       box-shadow: 0 3px 10px rgba(0,0,0,0.08);
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
