--- a/Rezky.html
+++ b/Rezky.html
@@ -111,7 +111,7 @@
     
     .data-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 5px 15px rgb(0,0,0);
     }
     
     .data-card h4 {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
