--- a/Rezky.html
+++ b/Rezky.html
@@ -21,7 +21,7 @@
     
     body {
       background: linear-gradient(135deg, #1a2a6c, #b21f1f, #1a2a6c);
-      color: #333;
+      color: #ff;
       padding: 20px;
       min-height: 100vh;
       display: flex;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
