--- a/Rezky.html
+++ b/Rezky.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MPP SAMOTO 100A ONLINE</title>
+  <title>MPP TECHFINE 60A ONLINE</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
