--- a/Rezky.html
+++ b/Rezky.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MPP TECHFINE 60A ONLINE</title>
+  <title>MPPT SAMOTO 100A ONLINE</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
@@ -344,7 +344,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>MPPT TECHFINE 60A MONITORING</h1>
+      <h1>MPPT SAMOTO 100A MONITORING</h1>
       <h2>Real-time Performance Tracking By Rezky Logam </h2>
     </header>
     
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
