--- a/Rezky.html
+++ b/Rezky.html
@@ -150,7 +150,7 @@
       border-radius: 8px;
       font-size: 1rem;
       background: silver;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 5px #fff;
     }
     
     .btn {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
