--- a/Rezky.html
+++ b/Rezky.html
@@ -150,13 +150,13 @@
       border-radius: 8px;
       font-size: 1rem;
       background: silver;
-      box-shadow: 0 2px 5px #fff;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
     }
     
     .btn {
       padding: 12px 25px;
       background: linear-gradient(to right, #3498db, #2c3e50);
-      color: white;
+      color: black;
       border: none;
       border-radius: 8px;
       cursor: pointer;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
