--- a/Rezky.html
+++ b/Rezky.html
@@ -34,7 +34,7 @@
       max-width: 1200px;
       background: rgba(255, 255, 255, 0.95);
       border-radius: 20px;
-      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 15px 30px #ff;
       overflow: hidden;
       padding: 25px;
       display: flex;
@@ -156,7 +156,7 @@
     .btn {
       padding: 12px 25px;
       background: linear-gradient(to right, #3498db, #2c3e50);
-      color: black;
+      color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
