--- a/Rezky.html
+++ b/Rezky.html
@@ -32,9 +32,9 @@
     .container {
       width: 100%;
       max-width: 1200px;
-      background: rgba(255, 255, 255, 0.95);
+      background:#fff;
       border-radius: 20px;
-      box-shadow: 0 15px 30px #ff;
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
       overflow: hidden;
       padding: 25px;
       display: flex;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
