--- a/Rezky.html
+++ b/Rezky.html
@@ -32,7 +32,7 @@
     .container {
       width: 100%;
       max-width: 1200px;
-      background: #fff;
+      background: rgba(255, 255, 255, 0.95);
       border-radius: 20px;
       box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
       overflow: hidden;
@@ -71,7 +71,7 @@
       background: linear-gradient(to bottom right, #f8f9fa, #e9ecef);
       border-radius: 15px;
       padding: 20px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+      box-shadow: 0 5px 15px #ffff;
     }
     
     .panel-title {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
