--- a/Rezky.html
+++ b/Rezky.html
@@ -34,7 +34,7 @@
       max-width: 1200px;
       background: rgba(255, 255, 255, 0.95);
       border-radius: 20px;
-      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 15px 30px #ffff;
       overflow: hidden;
       padding: 25px;
       display: flex;
@@ -71,7 +71,7 @@
       background: linear-gradient(to bottom right, #f8f9fa, #e9ecef);
       border-radius: 15px;
       padding: 20px;
-      box-shadow: 0 5px 15px #ffff;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
     }
     
     .panel-title {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
