--- a/Rezky.html
+++ b/Rezky.html
@@ -34,7 +34,7 @@
       max-width: 1200px;
       background: rgba(255, 255, 255, 0.95);
       border-radius: 20px;
-      box-shadow: 0 15px 30px #ffff;
+      box-shadow: 0 15px 30px rgb(0, 0, 0);
       overflow: hidden;
       padding: 25px;
       display: flex;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
