--- a/Rezky.html
+++ b/Rezky.html
@@ -45,7 +45,7 @@
     header {
       text-align: center;
       padding: 15px 0;
-      border-bottom: 3px solid #3498db;
+      border-bottom: 3px solid #00008b;
       margin-bottom: 10px;
     }
     
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
