--- a/Rezky.html
+++ b/Rezky.html
@@ -57,7 +57,7 @@
     }
     
     h2 {
-      color: #3498db;
+      color: #00008b;
       font-size: 1.5rem;
     }
     
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
