--- a/Rezky.html
+++ b/Rezky.html
@@ -53,7 +53,7 @@
       color: #2c3e50;
       font-size: 2.5rem;
       margin-bottom: 10px;
-      text-shadow: 1px 1px 3px black;
+      text-shadow: 1px 1px 3px rgb(0, 0, 0);
     }
     
     h2 {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
