--- a/Rezky.html
+++ b/Rezky.html
@@ -20,7 +20,7 @@
     }
     
     body {
-      background: linear-gradient(135deg, #1a2a6c, #b21f1f, #1a2a6c);
+      background: linear-gradient(135deg,#ffff #0000);
       color: #ff0000;
       padding: 20px;
       min-height: 100vh;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
