--- a/Rezky.html
+++ b/Rezky.html
@@ -21,7 +21,7 @@
     
     body {
       background: #00008b;
-      color: #0000;
+      color: #ffff;
       padding: 20px;
       min-height: 100vh;
       display: flex;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
