--- a/Rezky.html
+++ b/Rezky.html
@@ -20,7 +20,7 @@
     }
     
     body {
-      background: #00008b;
+      background: #0000;
       color: #00008b;
       padding: 20px;
       min-height: 100vh;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
