--- a/Rezky.html
+++ b/Rezky.html
@@ -20,8 +20,8 @@
     }
     
     body {
-      background: #0000;
-      color: #00008b;
+      background: linear-gradinet(135deg, #1a2a6c, #b21f1f, #1a2a6c);
+      color: #333;
       padding: 20px;
       min-height: 100vh;
       display: flex;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
