--- a/Rezky.html
+++ b/Rezky.html
@@ -34,7 +34,7 @@
       max-width: 1200px;
       background: rgba(255, 255, 255, 0.95);
       border-radius: 20px;
-      box-shadow: 0 15px 30px rgb(0, 0, 0);
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
       overflow: hidden;
       padding: 25px;
       display: flex;
@@ -53,11 +53,11 @@
       color: #2c3e50;
       font-size: 2.5rem;
       margin-bottom: 10px;
-      text-shadow: 1px 1px 3px rgb(0, 0, 0);
+      text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
     }
     
     h2 {
-      color: #00008b;
+      color: #3498db;
       font-size: 1.5rem;
     }
     
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
