--- a/Rezky.html
+++ b/Rezky.html
@@ -101,7 +101,7 @@
     }
     
     .data-card {
-      background: white;
+      background: silver;
       border-radius: 10px;
       padding: 15px;
       box-shadow: 0 3px 10px rgba(0,0,0,0.08);
@@ -749,4 +749,5 @@
 </body>
 
 </html>
+
 
