--- a/Rezky.html
+++ b/Rezky.html
@@ -96,7 +96,7 @@
       overflow-y: auto;
       padding: 10px;
       border-radius: 10px;
-      background: #fff;
+      background: #000;
       box-shadow: inset 0 0 10px rgba(0,0,0,0.05);
     }
     
@@ -749,5 +749,6 @@
 </body>
 
 </html>
+
 
 
