--- a/Rezky.html
+++ b/Rezky.html
@@ -92,12 +92,12 @@
       display: grid;
       grid-template-columns: repeat(5, 1fr);
       gap: 15px;
-      max-height: 800px;
+      max-height: 700px;
       overflow-y: auto;
       padding: 10px;
       border-radius: 10px;
       background: rgb(192, 192, 192);
-      box-shadow: inset 0 0 10px #0000;
+      box-shadow: inset 0 0 10px rgba(0,0,0,0.08);
     }
     
     .data-card {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
