--- a/Rezky.html
+++ b/Rezky.html
@@ -96,7 +96,7 @@
       overflow-y: auto;
       padding: 10px;
       border-radius: 10px;
-      background: rgb(192, 192, 192);
+      background: #996633;
       box-shadow: inset 0 0 10px rgba(0,0,0,0.08);
     }
     
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
