--- a/Rezky.html
+++ b/Rezky.html
@@ -97,7 +97,7 @@
       padding: 10px;
       border-radius: 10px;
       background: #fff33;
-      box-shadow: inset 0 0 10px rgba(0,0,0,0.08);
+      box-shadow: inset 0 0 10px #ccc;
     }
     
     .data-card {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
