--- a/Rezky.html
+++ b/Rezky.html
@@ -115,7 +115,7 @@
     }
     
     .data-card h4 {
-      color: #2c3e50;
+      color: silver;
       font-size: 1rem;
       margin-bottom: 8px;
       text-transform: uppercase;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
