--- a/Rezky.html
+++ b/Rezky.html
@@ -50,7 +50,7 @@
     }
     
     h1 {
-      color: #00008b;
+      color: #000000;
       font-size: 2.5rem;
       margin-bottom: 10px;
       text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
