--- a/Rezky.html
+++ b/Rezky.html
@@ -32,7 +32,7 @@
     .container {
       width: 100%;
       max-width: 1200px;
-      background: rgba(255, 255, 255, 0.95);
+      background: #000;
       border-radius: 20px;
       box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
       overflow: hidden;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
