--- a/Rezky.html
+++ b/Rezky.html
@@ -80,7 +80,7 @@
       align-items: center;
       margin-bottom: 15px;
       padding-bottom: 10px;
-      border-bottom: 2px solid #00008B;
+      border-bottom: 2px solid #0000;
     }
     
     .panel-title h3 {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
