--- a/Rezky.html
+++ b/Rezky.html
@@ -80,11 +80,11 @@
       align-items: center;
       margin-bottom: 15px;
       padding-bottom: 10px;
-      border-bottom: 2px solid #0000;
+      border-bottom: 2px solid #3498db;
     }
     
     .panel-title h3 {
-      color: #2c3e50;
+      color: #ff6600;
       font-size: 1.4rem;
     }
     
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
