--- a/Rezky.html
+++ b/Rezky.html
@@ -84,7 +84,7 @@
     }
     
     .panel-title h3 {
-      color: #ff6600;
+      color: #00008b;
       font-size: 1.4rem;
     }
     
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
