--- a/Rezky.html
+++ b/Rezky.html
@@ -106,7 +106,7 @@
       padding: 15px;
       box-shadow: 0 3px 10px rgba(0,0,0,0.08);
       transition: all 0.3s ease;
-      border-left: 4px solid #3498db;
+      border-left: 4px solid #0000;
     }
     
     .data-card:hover {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
