--- a/Rezky.html
+++ b/Rezky.html
@@ -149,7 +149,7 @@
       border: 2px solid #3498db;
       border-radius: 8px;
       font-size: 1rem;
-      background: #ff9966;
+      background: perak;
       box-shadow: 0 2px 5px rgba(0,0,0,0);
     }
     
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
