--- a/Rezky.html
+++ b/Rezky.html
@@ -32,7 +32,7 @@
     .container {
       width: 100%;
       max-width: 1200px;
-      background: #ffffff;
+      background: #cc9900;
       border-radius: 20px;
       box-shadow: 0 15px 30px #000000;
       overflow: hidden;
@@ -96,7 +96,7 @@
       overflow-y: auto;
       padding: 10px;
       border-radius: 10px;
-      background: #cc9900;
+      background: #999999;
       box-shadow: inset 0 0 10px rgba(0,0,0,0.05);
     }
     
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
