--- a/Rezky.html
+++ b/Rezky.html
@@ -32,7 +32,7 @@
     .container {
       width: 100%;
       max-width: 1200px;
-      background: #996633;
+      background: #ccffcc;
       border-radius: 20px;
       box-shadow: 0 15px 30px #000000;
       overflow: hidden;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
