--- a/Rezky.html
+++ b/Rezky.html
@@ -34,7 +34,7 @@
       max-width: 1200px;
       background: #996633;
       border-radius: 20px;
-      box-shadow: 0 15px 30px #ffcc00;
+      box-shadow: 0 15px 30px #000000;
       overflow: hidden;
       padding: 25px;
       display: flex;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
