--- a/Rezky.html
+++ b/Rezky.html
@@ -146,7 +146,7 @@
     .flatpickr-input {
       width: 100%;
       padding: 12px 15px;
-      border: 2px solid #3498db;
+      border: 2px solid #00008b;
       border-radius: 8px;
       font-size: 1rem;
       background: #cccccc;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
