--- a/Rezky.html
+++ b/Rezky.html
@@ -156,7 +156,7 @@
     .btn {
       padding: 12px 25px;
       background: linear-gradient(to right, #3498db, #2c3e50);
-      color: white;
+      color: black;
       border: none;
       border-radius: 8px;
       cursor: pointer;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
