--- a/Rezky.html
+++ b/Rezky.html
@@ -53,7 +53,7 @@
       color: #000000;
       font-size: 2.5rem;
       margin-bottom: 10px;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
+      text-shadow: 1px 1px 3px rgba(0,0,0,0);
     }
     
     h2 {
@@ -106,7 +106,7 @@
       padding: 15px;
       box-shadow: 0 3px 10px rgba(0,0,0,0.08);
       transition: all 0.3s ease;
-      border-left: 4px solid #0000ff;
+      border-left: 4px solid #000000;
     }
     
     .data-card:hover {
@@ -156,7 +156,7 @@
     .btn {
       padding: 12px 25px;
       background: linear-gradient(to right, #3498db, #2c3e50);
-      color: black;
+      color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
