--- a/Rezky.html
+++ b/Rezky.html
@@ -104,7 +104,7 @@
       background: #cccccc;
       border-radius: 10px;
       padding: 15px;
-      box-shadow: 0 3px 10px rgba(0,0,0,0.08);
+      box-shadow: 0 3px 10px #000000;
       transition: all 0.3s ease;
       border-left: 4px solid #000000;
     }
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
