--- a/Rezky.html
+++ b/Rezky.html
@@ -124,7 +124,7 @@
     .data-value {
       font-size: 1.4rem;
       font-weight: bold;
-      color: #9900000;
+      color: 8b0000;
     }
     
     .controls {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
