--- a/Rezky.html
+++ b/Rezky.html
@@ -115,7 +115,7 @@
     }
     
     .data-card h4 {
-      color: #2c3e50;
+      color: #000000;
       font-size: 1rem;
       margin-bottom: 8px;
       text-transform: uppercase;
@@ -124,7 +124,7 @@
     .data-value {
       font-size: 1.4rem;
       font-weight: bold;
-      color: #8b0000;
+      color: #cc0000;
     }
     
     .controls {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
