--- a/Rezky.html
+++ b/Rezky.html
@@ -133,9 +133,9 @@
       flex-wrap: wrap;
       align-items: center;
       padding: 15px;
-      background: #333333;
+      background: #cccccc;
       border-radius: 15px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+      box-shadow: 0 5px 15px #000000;
     }
     
     .date-picker {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
