--- a/Rezky.html
+++ b/Rezky.html
@@ -150,7 +150,7 @@
       border-radius: 8px;
       font-size: 1rem;
       background: #cccccc;
-      box-shadow: 0 2px 5px rgba(0,0,0,0);
+      box-shadow: 0 2px 5px #000000;
     }
     
     .btn {
@@ -163,7 +163,7 @@
       font-size: 1rem;
       font-weight: bold;
       transition: all 0.3s ease;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 6px #000000;
     }
     
     .btn:hover {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
