--- a/Rezky.html
+++ b/Rezky.html
@@ -182,7 +182,7 @@
       background: white;
       border-radius: 15px;
       padding: 20px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.08);
+      box-shadow: 0 5px 15px #000000;
     }
     
     .chart-header {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
