--- a/Rezky.html
+++ b/Rezky.html
@@ -168,7 +168,7 @@
     
     .btn:hover {
       transform: translateY(-3px);
-      box-shadow: 0 6px 8px rgba(0,0,0,0.15);
+      box-shadow: 0 6px 8px #000000;
       background: linear-gradient(to right, #2c3e50, #3498db);
     }
     
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
