--- a/Rezky.html
+++ b/Rezky.html
@@ -53,7 +53,7 @@
       color: #000000;
       font-size: 2.5rem;
       margin-bottom: 10px;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0);
+      text-shadow: 1px 1px 3px #000000;
     }
     
     h2 {
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
