--- a/Rezky.html
+++ b/Rezky.html
@@ -399,7 +399,7 @@
     </div>
     
     <div class="system-info">
-      <p>@Product By <a href="https://www.facebook.com/Fatkhur.etos2012/">Rezky Logam </a> WA Contact <a href="https://wa.me/628972309993">WA Contact</a> </p>
+      <p>@Product By <a href="https://web.facebook.com/muhammad.rezky.184/">Rezky Logam </a> WA Contact <a href="https://wa.me/6285249402703">WA Contact</a> </p>
     </div>
   </div>
 
@@ -749,6 +749,7 @@
 </body>
 
 </html>
+
 
 
 
