--- a/Rezky.html
+++ b/Rezky.html
@@ -344,8 +344,8 @@
 <body>
   <div class="container">
     <header>
-      <h1>MPPT Solar Monitoring System</h1>
-      <h2>Real-time Performance Tracking </h2>
+      <h1>MPPT SAMOTO 100A MONITORING</h1>
+      <h2>Real-time Performance Tracking By Rezky Logam </h2>
     </header>
     
     <div class="status-bar">
@@ -399,7 +399,7 @@
     </div>
     
     <div class="system-info">
-      <p>@Product By <a href="https://www.facebook.com/Fatkhur.etos2012/">Fatkhur Rohman </a> WA Contact <a href="https://wa.me/628972309993">WA Contact</a> </p>
+      <p>@Product By <a href="https://www.facebook.com/Fatkhur.etos2012/">Rezky Logam </a> WA Contact <a href="https://wa.me/628972309993">WA Contact</a> </p>
     </div>
   </div>
 
@@ -748,4 +748,5 @@
   </script>
 </body>
 </html>
+
 
