--- a/Rezky.html
+++ b/Rezky.html
@@ -179,7 +179,7 @@
     .chart-container {
       position: relative;
       height: 400px;
-      background: black;
+      background: silver;
       border-radius: 15px;
       padding: 20px;
       box-shadow: 0 5px 15px #000000;
@@ -748,6 +748,7 @@
   </script>
 </body>
 </html>
+
 
 
 
