--- a/Rezky.html
+++ b/Rezky.html
@@ -156,7 +156,7 @@
     .btn {
       padding: 12px 25px;
       background: linear-gradient(to right, #3498db, #2c3e50);
-      color: white;
+      color: #cccccc;
       border: none;
       border-radius: 8px;
       cursor: pointer;
@@ -179,7 +179,7 @@
     .chart-container {
       position: relative;
       height: 400px;
-      background: #cccccc;
+      background: white;
       border-radius: 15px;
       padding: 20px;
       box-shadow: 0 5px 15px #000000;
@@ -748,6 +748,7 @@
   </script>
 </body>
 </html>
+
 
 
 
