--- a/Rezky.html
+++ b/Rezky.html
@@ -131,7 +131,7 @@
       <!-- Row 1: Title -->
       <div class="mb-2">
         <h1 class="text-3xl md:text-4xl font-extrabold text-white tracking-wide">
-          MPPT SAMOTO 100A MONITORING
+          MPPT TECHFINE 60A MONITORING
         </h1>
         <h2 class="text-md font-light text-accent-main hidden sm:block">
           Pelacakan Kinerja Energi Surya Real-time By Rezky Logam
@@ -713,4 +713,5 @@
   </script>
 </body>
 </html>
+
 
