--- a/Rezky2.html
+++ b/Rezky2.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -713,6 +713,7 @@
   </script>
 </body>
 </html>
+
 
 
 
