--- a/TECHFINE 60A.html
+++ b/TECHFINE 60A.html
@@ -15,7 +15,7 @@
           colors: {
             'dark-bg': '#0D1117',      // Sangat Gelap (Hampir Hitam)
             'card-bg': '#161B22',      // Abu-abu Gelap (Untuk Panel)
-            'accent-main': '#00FFFF',  // Cyan Terang (Primary Accent - Menonjol)
+            'accent-main': '#ff7f00',  // Cyan Terang (Primary Accent - Menonjol)
             'accent-secondary': '#38BDF8', // Biru Langit (Secondary Accent)
             'text-light': '#FFFFFF',   // Teks Putih Penuh
             'success-green': '#10B981', // Hijau Emerald (Status OK)
@@ -713,4 +713,5 @@
   </script>
 </body>
 </html>
+
 
