--- a/TECHFINE 60A.html
+++ b/TECHFINE 60A.html
@@ -15,10 +15,10 @@
           colors: {
             'dark-bg': '#0D1117',      // Sangat Gelap (Hampir Hitam)
             'card-bg': '#161B22',      // Abu-abu Gelap (Untuk Panel)
-            'accent-main': '#FFA500',  // Cyan Terang (Primary Accent - Menonjol)
-            'accent-secondary': '#38BDF8', // Biru Langit (Secondary Accent)
+            'accent-main': '#FF7F00',  // Cyan Terang (Primary Accent - Menonjol)
+            'accent-secondary': '#FF0000', // Biru Langit (Secondary Accent)
             'text-light': '#FFFFFF',   // Teks Putih Penuh
-            'success-green': '#10B981', // Hijau Emerald (Status OK)
+            'success-green': '#00FF00', // Hijau Emerald (Status OK)
             'border-color': '#30363D', // Border Abu-abu Sedang
           },
           fontFamily: {
@@ -713,6 +713,7 @@
   </script>
 </body>
 </html>
+
 
 
 
