--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       height: 12px;
       border-radius: 50%;
       margin-left: 6px;
-      background: #ccc;
+      background: #ff0000;
       transition: background-color 0.3s ease;
       box-shadow: 0 0 5px rgba(0,0,0,0.2);
     }
