--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       height: 12px;
       border-radius: 50%;
       margin-left: 6px;
-      background: #ff0000;
+      background: #ffffff;
       transition: background-color 0.3s ease;
       box-shadow: 0 0 5px rgba(0,0,0,0.2);
     }
     
     .led.active {
-      background: #10b981;
+      background: #ff0000;
       box-shadow: 0 0 8px #10b981;
     }
     
