--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     
     .led.active {
-      background: #ff0000;
+      background: #0000ff;
       box-shadow: 0 0 8px #10b981;
     }
     
