--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ body.dark .battery-card i {
   <main class="flex-1 p-4 sm:p-6 w-full">
     <div class="max-w-7xl mx-auto">
       <div class="mb-6 flex justify-between items-center">
-        <h2 class="text-xl font-semibold text-gray-500">Battery Systems</h2>
+        <h2 class="text-xl font-semibold text-gray-500">Battery Systems 48V Dc</h2>
         <div class="text-sm text-gray-500">
           <span id="total-batteries">0</span> batteries connected
         </div>
@@ -219,7 +219,7 @@ body.dark .battery-card i {
 <footer class="bg-gray-800 text-gray-300 py-4 w-full">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 flex flex-col items-center text-center">
     <div class="text-sm">
-      © 2025 BMS Monitor System |
+      © 2025-2026 BMS Monitoring System |
       <a href="https://wa.me/628972309993" class="no-underline hover:text-white">
         Hubungi Developer
       </a>
