--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ body.dark .battery-card i {
   <main class="flex-1 p-4 sm:p-6 w-full">
     <div class="max-w-7xl mx-auto">
       <div class="mb-6 flex justify-between items-center">
-        <h2 class="text-xl font-semibold text-gray-500">Battery Systems 48V Dc</h2>
+        <h2 class="text-xl font-semibold text-gray-500">Baterai Sistem 48V Dc</h2>
         <div class="text-sm text-gray-500">
           <span id="total-batteries">0</span> batteries connected
         </div>
