--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@ body.dark .battery-card i {
           
           <div class="bg-purple-50 p-4 rounded-lg">
             <div class="flex justify-between items-center mb-2">
-              <div class="text-purple-700 font-medium">Cycle Count</div>
-              <div class="text-2xl font-bold text-purple-700" id="modalCycles"></div>
+              <div class="text-purple-700 font-medium"></div>
+              <div class="text-2xl font-bold text-purple-700" id=""></div>
             </div>
             <div class="text-xs text-gray-500 mt-1">Last updated: <span id="modalLastUpdate"></span></div>
           </div>
