--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@ body.dark .battery-card i {
           
           <div class="bg-purple-50 p-4 rounded-lg">
             <div class="flex justify-between items-center mb-2">
-              <div class="text-purple-700 font-medium">Cycle Count<>
-              <div class="text-2xl font-bold text-purple-700" id=">modalCycle"<>
+              <div class="text-purple-700 font-medium">Cycle Count</div>
+              <div class="text-2xl font-bold text-purple-700" id=">modalCycle"></div>
             </div>
             <div class="text-xs text-gray-500 mt-1">Last updated: <span id="modalLastUpdate"></span></div>
           </div>
@@ -555,7 +555,7 @@ function renderCards(datane) {
             </div>
           </div>
           <div class="mt-4 pt-3 border-t border-gray-100 text-xs text-gray-500 flex justify-between">
-            <span>Cycles: ${batt.cycles}</span>
+            <span>Cycles: ${batt.}</span>
             <span class="last-update"><i class="far fa-clock mr-1"></i>${batt.time}</span>
           </div>
         `;
