--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ function renderCards(datane) {
       document.getElementById("modalTitle").textContent = `${batt.typeBattery} #${batt.addr}`;
       document.getElementById("modalSOC").textContent = `${batt.soc}%`;
       document.getElementById("modalSOH").textContent = `${batt.soh}%`;
-      document.getElementById("modalCycles").textContent = batt.;
+      document.getElementById("modalCycles").textContent = batt.cycles;
       document.getElementById("modalVoltage").textContent = `${batt.voltage} V`;
       document.getElementById("modalBusVoltage").textContent = `${batt.busVoltage} V`;
       document.getElementById("modalCurrent").textContent = `${batt.current} A`;
