Update BMS MONITOR UPDATE.html

--- a/BMS MONITOR UPDATE.html
+++ b/BMS MONITOR UPDATE.html
@@ -32,7 +32,7 @@ Content-Location: https://fatkhurrr.github.io/lipo4Mon/index.html?id=3632674826
       <div class="bg-white/20 p-2 rounded-lg mr-3">
         <i class="fas fa-car-battery text-2xl"></i>
       </div>
-      <h1 class="text-2xl font-bold">LiFePo4 BMS MONITORING</h1>
+      <h1 class="text-2xl font-bold">Huawei BMS MONITORING By Rezky Logam</h1>
     </div>
 
     <div class="flex items-center space-x-4">
@@ -75,9 +75,9 @@ Content-Location: https://fatkhurrr.github.io/lipo4Mon/index.html?id=3632674826
   <main class="flex-1 p-4 sm:p-6 w-full">
     <div class="max-w-7xl mx-auto">
       <div class="mb-6 flex justify-between items-center">
-        <h2 class="text-xl font-semibold text-gray-500">Battery Systems</h2>
+        <h2 class="text-xl font-semibold text-gray-500">Baterai Sistem 48V DC</h2>
         <div class="text-sm text-gray-500">
-          <span id="total-batteries">7</span> batteries connected
+          <span id="total-batteries">7</span> baterai terkoneksi
         </div>
       </div>
 
@@ -595,8 +595,8 @@ Content-Location: https://fatkhurrr.github.io/lipo4Mon/index.html?id=3632674826
 <footer class="text-gray-300 py-4 w-full" style="background-color: #1f2937;">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 flex flex-col items-center text-center">
     <div class="text-sm">
-      © 2025 BMS Monitor System |
-      <a href="https://wa.me/628972309993" class="no-underline hover:text-white">
+      © 2025-2026 BMS Monitoring System |
+      <a href="https://wa.me/6285249402703" class="no-underline hover:text-white">
         Hubungi Developer
       </a>
       <label id="id_monitoring_footer" style="display:block;"> 🌐 192.168.1.196 📶-32 ▶️ </label>
@@ -5164,3 +5164,4 @@ body[data-theme="dark"] footer { background-color: rgb(17, 24, 39); color: rgb(2
 
 .summary-card { background-color: var(--card-lapis); color: var(--card-text); border-left: 5px solid var(--primary); }
 ------MultipartBoundary--DCozyZo4Ptq6a2dCZ3JTjfvBqMNgOJ5Lpt8e6oaD86------
+
