--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LiFePo4 BMS ONLINE</title>
+  <title>BMS HUAWEI MONITORING</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -173,7 +173,7 @@
       <div class="bg-white/20 p-2 rounded-lg mr-3">
         <i class="fas fa-car-battery text-2xl"></i>
       </div>
-      <h1 class="text-2xl font-bold">LiFePo4 BMS MONITORING</h1>
+      <h1 class="text-2xl font-bold">HUAWEI BMS MONITORING By Rezky Logam</h1>
     </div>
 
     <div class="flex items-center space-x-4">
@@ -217,31 +217,31 @@
   <main class="flex-1 p-4 sm:p-6 w-full">
     <div class="max-w-7xl mx-auto">
       <div class="mb-6 flex justify-between items-center">
-        <h2 class="text-xl font-semibold text-gray-500">Battery Systems</h2>
+        <h2 class="text-xl font-semibold text-gray-500">Baterai Sistem 48V DC</h2>
         <div class="text-sm text-gray-500">
-          <span id="total-batteries">0</span> batteries connected
+          <span id="total-batteries">0</span> Baterai Terkoneksi
         </div>
       </div>
 
       <!-- Summary Section -->
       <div id="summarySection" class="mb-8 hidden">
-        <h3 class="text-lg font-semibold text-gray-700 mb-4">Overall Summary</h3>
+        <h3 class="text-lg font-semibold text-gray-700 mb-4">Ringkasan Keseluruhan</h3>
         <div class="summary-card rounded-xl shadow-sm p-5">
           <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-sm">
             <div class="space-y-1">
-              <div class="text-gray-600">Avg Pack Voltage</div>
+              <div class="text-gray-600">Total Tegangan</div>
               <div id="avg-voltage" class="font-semibold text-white-800">-</div>
             </div>
             <div class="space-y-1">
-              <div class="text-gray-600">Avg SOC</div>
+              <div class="text-gray-600">Total SOC</div>
               <div id="avg-soc" class="font-semibold text-white-800">-</div>
             </div>
             <div class="space-y-1">
-              <div class="text-gray-600">Avg SOH</div>
+              <div class="text-gray-600">Total SOH</div>
               <div id="avg-soh" class="font-semibold text-white-800">-</div>
             </div>
             <div class="space-y-1">
-              <div class="text-gray-600">Total Current</div>
+              <div class="text-gray-600">Total Arus</div>
               <div id="total-current" class="font-semibold text-white-800">-</div>
             </div>
             <div class="space-y-1">
@@ -268,8 +268,8 @@
 <footer class="text-gray-300 py-4 w-full" style="background-color: #1f2937;">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 flex flex-col items-center text-center">
     <div class="text-sm">
-      © 2025 BMS Monitor System |
-      <a href="https://wa.me/628972309993" class="no-underline hover:text-white">
+      © 2025-2026 BMS Monitoring Sistem |
+      <a href="https://wa.me/6285249402703" class="no-underline hover:text-white">
         Hubungi Developer
       </a>
       <label id="id_monitoring_footer" style="display:block;"></label>
@@ -920,4 +920,5 @@ themeToggleLink.addEventListener('click', (e) => {
 });
 </script>
 </body>
+
 </html>
