--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-sm">
             <div class="space-y-1">
               <div class="text-gray-600">Total Tegangan</div>
-              <div id="avg-voltage" class="font-semibold text-orange-800">-</div>
+              <div id="avg-voltage" class="font-semibold text-yellow-800">-</div>
             </div>
             <div class="space-y-1">
               <div class="text-gray-600">Total SOC</div>
@@ -246,7 +246,7 @@
             </div>
             <div class="space-y-1">
               <div class="text-gray-600">Total Power</div>
-              <div id="total-power" class="font-semibold text-red-800">-</div>
+              <div id="total-power" class="font-semibold text-pink-800">-</div>
             </div>
           </div>
         </div>
@@ -922,4 +922,5 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
