--- a/index.html
+++ b/index.html
@@ -230,23 +230,23 @@
           <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-sm">
             <div class="space-y-1">
               <div class="text-gray-600">Total Tegangan</div>
-              <div id="avg-voltage" class="font-semibold text-yellow-800">-</div>
+              <div id="avg-voltage" class="font-semibold text-ffff00-800">-</div>
             </div>
             <div class="space-y-1">
               <div class="text-gray-600">Total SOC</div>
-              <div id="avg-soc" class="font-semibold text-green-800">-</div>
+              <div id="avg-soc" class="font-semibold text-00cc00-800">-</div>
             </div>
             <div class="space-y-1">
               <div class="text-gray-600">Total SOH</div>
-              <div id="avg-soh" class="font-semibold text-violet-800">-</div>
+              <div id="avg-soh" class="font-semibold text-9900cc-800">-</div>
             </div>
             <div class="space-y-1">
               <div class="text-gray-600">Total Arus</div>
-              <div id="total-current" class="font-semibold text-blue-800">-</div>
+              <div id="total-current" class="font-semibold text-0000ff-800">-</div>
             </div>
             <div class="space-y-1">
               <div class="text-gray-600">Total Power</div>
-              <div id="total-power" class="font-semibold text-pink-800">-</div>
+              <div id="total-power" class="font-semibold text-ff0000-800">-</div>
             </div>
           </div>
         </div>
@@ -922,5 +922,6 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
