--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     }
     
     .led.active {
-      background: #10b981;
-      box-shadow: 0 0 8px #10b981;
+      background: #990000;
+      box-shadow: 0 0 8px #990000;
     }
     
     #id_monitoring_footer {
@@ -922,6 +922,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
