--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
               <div id="total-current" class="font-semibold text-white-1500">-</div>
             </div>
             <div class="space-y-1">
-              <div class="text-light gray-1000">Total Power</div>
+              <div class="text-light gray-1000">Total Daya</div>
               <div id="total-power" class="font-semibold text-white-1500">-</div>
             </div>
           </div>
@@ -922,6 +922,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
