--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
         <h3 class="text-lg font-semibold text-light gray-850 mb-4">Ringkasan Keseluruhan</h3>
         <div class="summary-card rounded-xl shadow-sm p-5">
           <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-sm">
+          </div>
             <div class="space-y-1">
               <div class="text-light gray-1000">Total Tegangan</div>
               <div id="avg-voltage" class="font-semibold text-white-1500">-</div>
@@ -922,6 +923,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
