--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-sm">
             <div class="space-y-1">
               <i class="fa fa-battery-level" style="color: yellow;"></i>
-              <span class="percentage">
+              <div class="percentage">
               <div class="text-light gray-1000">Total Tegangan</div>
               <div id="avg-voltage" class="font-semibold text-white-1500">-</div>
             </div>
@@ -924,6 +924,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
