--- a/index.html
+++ b/index.html
@@ -229,8 +229,7 @@
         <div class="summary-card rounded-xl shadow-sm p-5">
           <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-sm">
             <div class="space-y-1">
-              <i class="fa fa-battery-level" style="color: yellow;"></i>
-              <div class="percentage">
+              <i class="fa fa-battery-full" style="color: yellow;" class="percentage"></i>
               <div class="text-light gray-1000">Total Tegangan</div>
               <div id="avg-voltage" class="font-semibold text-white-1500">-</div>
             </div>
@@ -924,6 +923,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
