--- a/index.html
+++ b/index.html
@@ -229,16 +229,17 @@
         <div class="summary-card rounded-xl shadow-sm p-5">
           <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-sm">
             <div class="space-y-1">
-              <i class="fa fa-battery-full" style="color: green;"></i>
+              <i class="fa fa-lightning" style="color: green;"></i>
               <div class="text-light gray-1000">Total Tegangan</div>
               <div id="avg-voltage" class="font-semibold text-white-1500">-</div>
             </div>
             <div class="space-y-1">
-              <i class="fa fa-battery-three-quarters" style="color: light green;"></i>
+              <i class="fa fa-battery" style="color: light green;"></i>
               <div class="text-light gray-1000">Total SOC</div>
               <div id="avg-soc" class="font-semibold text-white-1500">-</div>
             </div>
             <div class="space-y-1">
+              <i class="fa fa-heart" style="color: light green;"></i>
               <div class="text-light gray-1000">Total SOH</div>
               <div id="avg-soh" class="font-semibold text-white-1500">-</div>
             </div>
@@ -924,6 +925,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
