--- a/index.html
+++ b/index.html
@@ -229,25 +229,27 @@
         <div class="summary-card rounded-xl shadow-sm p-5">
           <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-sm">
             <div class="space-y-1">
-              <i class="fa fa-bolt" style="color: green;"></i>
+              <i class="fa fa-bolt" style="color: yellow;"></i>
               <div class="text-light gray-1000">Total Tegangan</div>
               <div id="avg-voltage" class="font-semibold text-white-1500">-</div>
             </div>
             <div class="space-y-1">
-              <i class="fa fa-battery-full" style="color: light green;"></i>
+              <i class="fa fa-battery-full" style="color: green;"></i>
               <div class="text-light gray-1000">Total SOC</div>
               <div id="avg-soc" class="font-semibold text-white-1500">-</div>
             </div>
             <div class="space-y-1">
-              <i class="fa fa-heart-full" style="color: light green;"></i>
+              <i class="fa fa-heart" style="color: blue;"></i>
               <div class="text-light gray-1000">Total SOH</div>
               <div id="avg-soh" class="font-semibold text-white-1500">-</div>
             </div>
             <div class="space-y-1">
+              <i class="fa fa-wave" style="color: orange;"></i>
               <div class="text-light gray-1000">Total Arus</div>
               <div id="total-current" class="font-semibold text-white-1500">-</div>
             </div>
             <div class="space-y-1">
+              <i class="fa fa-bolt" style="color: red;"></i>
               <div class="text-light gray-1000">Total Daya</div>
               <div id="total-power" class="font-semibold text-white-1500">-</div>
             </div>
@@ -925,6 +927,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
