--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               <div id="avg-soh" class="font-semibold text-white-1500">-</div>
             </div>
             <div class="space-y-1">
-              <i class="fa fa-speedometer" style="color: orange;"></i>
+              <i class="fa fa-tachometer" style="color: orange;"></i>
               <div class="text-light gray-1000">Total Arus</div>
               <div id="total-current" class="font-semibold text-white-1500">-</div>
             </div>
@@ -927,6 +927,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
