--- a/BMS.html
+++ b/BMS.html
@@ -254,9 +254,9 @@
               <div id="total-power" class="font-semibold text-white-2500">-</div>
             </div>
             <div class="space-y-1">
-              <i class="fa fa-temperature" style="color: pink;"></i>
-              <div class="text-light gray-1500">Total Temperatur Cell</div>
-              <div id="total-temperature" class="font-semibold text-white-2500">-</div>
+              <i class="fa fa-thermometer-half" style="color: pink;"></i>
+              <div class="text-light gray-1500">Total Temp. Cell</div>
+              <div id="avg-temp" class="font-semibold text-white-2500">--&deg;C</div>-</div>
             </div>
           </div>
         </div>
@@ -932,6 +932,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
