--- a/BMS.html
+++ b/BMS.html
@@ -256,7 +256,7 @@
             <div class="space-y-1">
               <i class="fa fa-thermometer-half" style="color: pink;"></i>
               <div class="text-light gray-1500">Total Temp. Cell</div>
-              <div id="avg-temp" class="font-semibold text-white-2500">--&deg;C</div>
+              <div id="avg-temp" class="font-semibold text-orange-2500">34&deg;C</div>
             </div>
           </div>
         </div>
@@ -932,6 +932,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
