--- a/BMS.html
+++ b/BMS.html
@@ -142,7 +142,7 @@
 
     body[data-theme="dark"] header {
       background-color: #1f2937;
-      color: #ffffff;
+      color: #000000;
     }
 
     /* Footer */
@@ -932,6 +932,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
