--- a/BMS.html
+++ b/BMS.html
@@ -141,8 +141,8 @@
     }
 
     body[data-theme="dark"] header {
-      background-color: #1f2937;
-      color: #000000;
+      background-color: #000000;
+      color: #ffffff;
     }
 
     /* Footer */
@@ -932,6 +932,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
