--- a/BMS.html
+++ b/BMS.html
@@ -148,7 +148,7 @@
     /* Footer */
     footer {
       background-color: #1f2937;
-      color: #9ca3af;
+      color: #ffffff;
       transition: background-color 0.3s, color 0.3s;
     }
 
@@ -932,6 +932,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
