--- a/BMS.html
+++ b/BMS.html
@@ -147,8 +147,8 @@
 
     /* Footer */
     footer {
-      background-color: #1f2937;
-      color: #ffffff;
+      background-color: #000000;
+      color: #9ca3af;
       transition: background-color 0.3s, color 0.3s;
     }
 
@@ -932,6 +932,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
