--- a/BMS.html
+++ b/BMS.html
@@ -141,19 +141,19 @@
     }
 
     body[data-theme="dark"] header {
-      background-color: #000000;
+      background-color: #1f2937;
       color: #ffffff;
     }
 
     /* Footer */
     footer {
-      background-color: #000000;
+      background-color: #1f2937;
       color: #9ca3af;
       transition: background-color 0.3s, color 0.3s;
     }
 
     body[data-theme="dark"] footer {
-      background-color: #111827;
+      background-color: rgba(0,0,0,0.2);
       color: #d1d5db;
     }
 
@@ -932,6 +932,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
