--- a/BMS.html
+++ b/BMS.html
@@ -153,8 +153,8 @@
     }
 
     body[data-theme="dark"] footer {
-      background-color: rgba(0,0,0,0.2);
-      color: #d1d5db;
+      background-color:#000000;
+      color: #000000;
     }
 
     /* Summary Card */
@@ -932,6 +932,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
