--- a/BMS.html
+++ b/BMS.html
@@ -141,7 +141,7 @@
     }
 
     body[data-theme="dark"] header {
-      background-color: #1f2937;
+      background-color: #000000;
       color: #ffffff;
     }
 
@@ -154,7 +154,7 @@
 
     body[data-theme="dark"] footer {
       background-color:#000000;
-      color: #000000;
+      color: #ffffff;
     }
 
     /* Summary Card */
@@ -932,6 +932,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
