--- a/BMS.html
+++ b/BMS.html
@@ -141,7 +141,7 @@
     }
 
     body[data-theme="dark"] header {
-      background-color: #000000;
+      background-color: #1f2937;
       color: #ffffff;
     }
 
@@ -153,8 +153,8 @@
     }
 
     body[data-theme="dark"] footer {
-      background-color:#000000;
-      color: #ffffff;
+      background-color: #111827;
+      color: #d1d5db;
     }
 
     /* Summary Card */
@@ -932,6 +932,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
