--- a/BMS.html
+++ b/BMS.html
@@ -38,7 +38,7 @@
       --card-subtext: #cccccc;
       --icon-voltage: #f59e0b;
       --icon-current: #60a5fa;
-      background-color: #111827;
+      background-color: rgba(0,0,0,0.2);
       color: #f3f4f6;
     }
     
@@ -927,6 +927,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
