--- a/BMS.html
+++ b/BMS.html
@@ -253,6 +253,11 @@
               <div class="text-light gray-1000">Total Daya</div>
               <div id="total-power" class="font-semibold text-white-1500">-</div>
             </div>
+            <div class="space-y-1">
+              <i class="fa fa-thermometer" style="color: pingk;"></i>
+              <div class="text-light gray-1000">Total Temp. Cell</div>
+              <div id="total-temp" class="font-semibold text-white-1500"34&deg;C>-</div>
+            </div>
           </div>
         </div>
       </div>
@@ -927,6 +932,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
