--- a/BMS.html
+++ b/BMS.html
@@ -227,7 +227,7 @@
       <div id="summarySection" class="mb-8 hidden">
         <h3 class="text-lg font-semibold text-light gray-850 mb-4">Ringkasan Keseluruhan</h3>
         <div class="summary-card rounded-xl shadow-sm p-5">
-          <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-md">
+          <div class="grid grid-cols-2 md:grid-cols-5 gap-4 text-big">
             <div class="space-y-1">
               <i class="fa fa-bolt" style="color: yellow;"></i>
               <div class="text-light gray-1000">Total Tegangan</div>
@@ -252,11 +252,6 @@
               <i class="fa fa-bolt" style="color: red;"></i>
               <div class="text-light gray-1000">Total Daya</div>
               <div id="total-power" class="font-semibold text-white-1500">-</div>
-            </div>
-            <div class="space-y-1">
-              <i class="fa fa-thermometer" style="color: pingk;"></i>
-              <div class="text-light gray-1000">Total Temp. Cell</div>
-              <div id="total-temp" class="font-semibold text-white-1500"34&deg;C>-</div>
             </div>
           </div>
         </div>
@@ -932,6 +927,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
