--- a/BMS.html
+++ b/BMS.html
@@ -386,7 +386,7 @@
 
         <!-- Cell Voltages -->
         <div class="bg-gray-50 p-4 rounded-lg">
-          <h3 class="font-big text-gray-700 mb-4 flex items-center">
+          <h3 class="font-medium text-gray-700 mb-4 flex items-center">
             <i class="fas fa-battery-three-quarters text-green-500 mr-2"></i> Cell Voltages
           </h3>
           <div id="modalCells" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-3"></div>
@@ -927,6 +927,7 @@ themeToggleLink.addEventListener('click', (e) => {
 </body>
 
 </html>
+
 
 
 
