--- a/SAMOTO 100A.html
+++ b/SAMOTO 100A.html
@@ -14,7 +14,7 @@
         extend: {
           colors: {
             'dark-bg': '#0D1117',      // Sangat Gelap (Hampir Hitam)
-            'card-bg': '#161B22',      // Abu-abu Gelap (Untuk Panel)
+            'card-bg': '#ffffff',      // Sangat Gelap (Untuk Panel)
             'accent-main': '#FF7F00',  // Cyan Terang (Primary Accent - Menonjol)
             'accent-secondary': '#FF0000', // Biru Langit (Secondary Accent)
             'text-light': '#FFFFFF',   // Teks Putih Penuh
@@ -713,6 +713,7 @@
   </script>
 </body>
 </html>
+
 
 
 
