--- a/SAMOTO 100A.html
+++ b/SAMOTO 100A.html
@@ -13,8 +13,8 @@
       theme: {
         extend: {
           colors: {
-            'dark-bg': '#0D1117',      // Sangat Gelap (Hampir Hitam)
-            'card-bg': '#ffffff',      // Sangat Gelap (Untuk Panel)
+            'dark-bg': '#000000',      // Sangat Gelap (Sangat Hitam)
+            'card-bg': '#000000',      // Sangat Gelap (Untuk Panel)
             'accent-main': '#FF7F00',  // Cyan Terang (Primary Accent - Menonjol)
             'accent-secondary': '#FF0000', // Biru Langit (Secondary Accent)
             'text-light': '#FFFFFF',   // Teks Putih Penuh
@@ -713,6 +713,7 @@
   </script>
 </body>
 </html>
+
 
 
 
